feat: add settings page

--- a/apps/web/src/styles/variables.css
+++ b/apps/web/src/styles/variables.css
@@ -3,6 +3,7 @@
   --color-primary: rgba(255, 97, 208, 1);
   --color-bg-white: #ffffff;
   --color-text-black: #323232;
+  --color-text-gray: #4a5568;
 
   /* Background Colors */
   --color-bg-primary: rgb(250, 220, 240);
