feat: show progress in timeline

--- a/apps/web/src/styles/variables.css
+++ b/apps/web/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   /* Brand Colors */
-  --color-primary: rgba(255, 97, 208, 1);
+  --color-primary: #323232;
   --color-bg-white: #ffffff;
   --color-text-black: #323232;
   --color-text-gray: #4a5568;
