--- a/apps/web/src/features/progress/components/ProgressCard/style.module.css
+++ b/apps/web/src/features/progress/components/ProgressCard/style.module.css
@@ -5,10 +5,11 @@
   border-radius: 10px;
   padding: 8px 4px 8px 16px;
 
-  display: grid;
-  grid-template-columns: 1fr 40px;
+  display: flex;
+  flex-direction: column;
   gap: 16px;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
 
   &:hover {
     background-color: var(--color-gray100);
