--- a/apps/web/src/features/progress/components/AddProgressButton/style.module.css
+++ b/apps/web/src/features/progress/components/AddProgressButton/style.module.css
@@ -6,5 +6,7 @@
   box-shadow: 0px 5px 15px 5px #ddd;
   width: 76px;
   height: 76px;
+  display: grid;
+  place-content: center;
   cursor: pointer;
 }
