--- a/apps/web/src/features/progress/components/ProgressContainer/style.module.css
+++ b/apps/web/src/features/progress/components/ProgressContainer/style.module.css
@@ -1,3 +1,11 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  max-width: 700px;
+  width: 100%;
+}
+
 .addButton {
   position: fixed;
   bottom: 24px;
