--- a/apps/web/src/features/goal/components/GoalForm/style.module.css
+++ b/apps/web/src/features/goal/components/GoalForm/style.module.css
@@ -1,7 +1,11 @@
 .goalInput {
+  display: flex;
+  justify-content: center;
   width: 100%;
 
   .form {
+    max-width: 700px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 40px;
