--- a/apps/web/src/features/goal/components/GoalCard/style.module.css
+++ b/apps/web/src/features/goal/components/GoalCard/style.module.css
@@ -1,16 +1,21 @@
 .card {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   width: 100%;
   border: 1px solid var(--color-gray300);
   background-color: var(--color-base-white);
   border-radius: 10px;
-  padding: 8px 4px 8px 16px;
-
-  display: grid;
-  grid-template-columns: 1fr 40px;
-  gap: 16px;
-  align-items: center;
+  padding: 12px 4px 12px 16px;
 
   &:hover {
     background-color: var(--color-gray100);
+  }
+
+  .title {
+    display: grid;
+    grid-template-columns: 1fr 40px;
+    gap: 16px;
+    align-items: center;
   }
 }
